Commit logging for the three commands and add in properties file

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.error.include-message=always
+spring.application.name=reddit
+management.endpoints.web.exposure.include=*
+management.server.port=9091
+commands={'createPost': '${spring.application.name}::Create Post::',\
+  'comment': '${spring.application.name}::Create Comment::', \
+  'readWall': '${spring.application.name}::Read Wall::'}
