Refactor the configuration for logging

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.error.include-message=always
 spring.application.name=reddit
 management.endpoints.web.exposure.include=*
 management.server.port=9091
-commands={'createPost': '${spring.application.name}::Create Post::',\
-  'comment': '${spring.application.name}::Create Comment::', \
-  'readWall': '${spring.application.name}::Read Wall::'}
+general.commands.createPost=${spring.application.name}::Create Post::
+general.commands.comment=${spring.application.name}::Create Comment::
+general.commands.readWall=${spring.application.name}::Read Wall::
