Commit service discovery

--- a/service-discovery/pom.xml
+++ b/service-discovery/pom.xml
@@ -8,22 +8,19 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <name>amqp</name>
-    <description>Semester 10 Scalable Reddit Microservice - Rabbit MQ Message Broker</description>
-    <artifactId>amqp</artifactId>
+
+    <artifactId>service-discovery</artifactId>
+    <name>service-discovery</name>
+    <description>Semester 10 Scalable Reddit Application - Service Discovery for remote connections</description>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
     </dependencies>
+
 </project>
