--- a/apps/notificationsApp/pom.xml
+++ b/apps/notificationsApp/pom.xml
@@ -3,14 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <dependencies>
-        <dependency>
-            <groupId>com.ScalableTeam-0-0-1</groupId>
-            <artifactId>amqp</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
     <parent>
         <artifactId>apps</artifactId>
         <groupId>com.ScalableTeam-0-0-1</groupId>
@@ -20,4 +12,17 @@
     <artifactId>notificationsApp</artifactId>
     <name>notificationsApp</name>
     <description>Semester 10 Scalable Reddit Microservice - Notifications</description>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.ScalableTeam-0-0-1</groupId>
+            <artifactId>amqp</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+    </dependencies>
 </project>
