--- a/apps/notificationsApp/src/main/resources/application.properties
+++ b/apps/notificationsApp/src/main/resources/application.properties
@@ -1,2 +1,4 @@
+spring.application.name=notifications
 management.endpoints.web.exposure.include=*
 management.server.port=9091
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
