--- a/apps/redditApp/pom.xml
+++ b/apps/redditApp/pom.xml
@@ -40,6 +40,10 @@
 			<artifactId>arangodb-spring-boot-starter</artifactId>
 			<version>2.3.3.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
