--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.error.include-message=always
 spring.application.name=reddit
 management.endpoints.web.exposure.include=*
 management.server.port=9091
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 general.commands.createPost=${spring.application.name}::Create Post::
 general.commands.comment=${spring.application.name}::Create Comment::
 general.commands.readWall=${spring.application.name}::Read Wall::
