--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -6,3 +6,4 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 general.commands.createPost=${spring.application.name}::Create Post::
 general.commands.comment=${spring.application.name}::Create Comment::
 general.commands.readWall=${spring.application.name}::Read Wall::
+general.commands.followReddit=${spring.application.name}::Follow Reddit::
