--- a/apps/redditApp/pom.xml
+++ b/apps/redditApp/pom.xml
@@ -43,6 +43,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.1.2</version>
 		</dependency>
 	</dependencies>
 
