Added Normal Posts caching and updated services to return requested objects

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -7,3 +7,5 @@ general.commands.createPost=${spring.application.name}::Create Post::
 general.commands.comment=${spring.application.name}::Create Comment::
 general.commands.readWall=${spring.application.name}::Read Wall::
 general.commands.followReddit=${spring.application.name}::Follow Reddit::
+spring.redis.host=localhost
+spring.redis.port=6379
