--- a/amqp/src/main/resources/message-queues.properties
+++ b/amqp/src/main/resources/message-queues.properties
@@ -4,4 +4,6 @@ mq.queues.request.reddit.createPost=REDDIT_CREATE_POST_REQUEST
 mq.queues.response.reddit.createPost=REDDIT_CREATE_POST_RESPONSE
 mq.queues.request.reddit.comment=REDDIT_COMMENT_REQUEST
 mq.queues.response.reddit.comment=REDDIT_COMMENT_RESPONSE
+mq.queues.request.reddit.getPostComments=REDDIT_GET_POST_COMMENTS_REQUEST
+mq.queues.request.reddit.getPostCommentsRequests=REDDIT_GET_POST_COMMENTS_REQUEST
 mq.queues.request.notifications.publishNotification=NOTIFICATIONS_PUBLISH_NOTIFICATION_REQUEST
