Commit Swagger dependency

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -80,5 +90,6 @@
         <module>apps</module>
         <module>amqp</module>
         <module>service-discovery</module>
+        <module>swagger-docs</module>
     </modules>
 </project>
