--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -37,6 +37,9 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 
 spring.redis.host=localhost
 spring.redis.port=6379
+popularPostsUpvoteThreshold=1
+popularPostsCache="popularPostsCache"
+postsCache="postsCache"
 
 general.commands.createPost=${spring.application.name}::Create Post::
 general.commands.comment=${spring.application.name}::Create Comment::
@@ -50,3 +53,4 @@ general.commands.getPostComments=${spring.application.name}::Get Post Comments::
 general.commands.reportPost=${spring.application.name}::Report Post::
 general.commands.viewReports=${spring.application.name}::Moderator View Reports::
 general.commands.banUser=${spring.application.name}::Moderator Ban User::
+general.commands.getPopularPost=${spring.application.name}::Get Popular Posts::
