adding popularPosts Functionality and refactoring caching code

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -32,3 +32,6 @@ general.commands.upvotePost=${spring.application.name}::Upvote Post::
 general.commands.downvotePost=${spring.application.name}::Downvote Post::
 general.commands.upvoteComment=${spring.application.name}::Upvote Comment::
 general.commands.downvoteComment=${spring.application.name}::Downvote Comment::
+popularPostsUpvoteThreshold=1
+popularPostsCache="popularPostsCache"
+postsCache="postsCache"
