Commit finished message queues

--- a/apps/notificationsApp/src/main/resources/application.properties
+++ b/apps/notificationsApp/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.config.import=
 spring.application.name=notifications
 management.endpoints.web.exposure.include=*
 management.server.port=9091
