--- a/apps/redditApp/pom.xml
+++ b/apps/redditApp/pom.xml
@@ -48,5 +48,11 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 			<version>2.4.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.ScalableTeam-0-0-1</groupId>
+			<artifactId>amqp</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
