Commit postgres pooling config, moving entities folders and applying transactions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,14 @@ services:
       - "15672:15672"
     networks:
       - spring
+  cache:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning
+    volumes:
+      - cache:/data
 networks:
   postgres:
     driver: bridge
@@ -43,3 +51,4 @@ networks:
 volumes:
   postgres:
   pgadmin:
+  cache:
