--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -1,17 +1,31 @@
 server.error.include-message=always
+server.error.include-binding-errors=always
 spring.application.name=reddit
 management.endpoints.web.exposure.include=*
 management.server.port=9091
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+general.environment=production
 
-postgresql.database-name=reddit
-postgresql.database-port=5432
-spring.datasource.url=jdbc:postgresql://localhost:${postgresql.database-port}/${postgresql.database-name}?escapeSyntaxCallMode=call
-spring.datasource.username=maria
-spring.datasource.password=maria
+postgres.host=localhost
+postgres.port=5432
+postgres.dbName=${general.environment}-reddit
+postgres.username=maria
+postgres.password=maria
+
+spring.datasource-sql.driver-class-name=org.postgresql.Driver
+spring.datasource-sql.url=jdbc:postgresql://${postgres.host}:${postgres.port}/${postgres.dbName}?escapeSyntaxCallMode=call
+spring.datasource-sql.username=${postgres.username}
+spring.datasource-sql.password=${postgres.password}
+
+spring.datasource-sql.configuration.pool-name=SqlHikariPool
+spring.datasource-sql.configuration.connection-timeout=20000
+spring.datasource-sql.configuration.minimum-idle=10
+spring.datasource-sql.configuration.maximum-pool-size=10
+spring.datasource-sql.configuration.max-lifetime=30000
+spring.datasource-sql.configuration.auto-commit=false
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
@@ -21,13 +35,13 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 
+spring.redis.host=localhost
+spring.redis.port=6379
+
 general.commands.createPost=${spring.application.name}::Create Post::
 general.commands.comment=${spring.application.name}::Create Comment::
 general.commands.readWall=${spring.application.name}::Read Wall::
 general.commands.followReddit=${spring.application.name}::Follow Reddit::
-spring.redis.host=localhost
-spring.redis.port=6379
-
 general.commands.upvotePost=${spring.application.name}::Upvote Post::
 general.commands.downvotePost=${spring.application.name}::Downvote Post::
 general.commands.upvoteComment=${spring.application.name}::Upvote Comment::
