Commit stashed changes

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -45,6 +45,8 @@ general.commands.followReddit=${spring.application.name}::Follow Reddit::
 general.commands.upvotePost=${spring.application.name}::Upvote Post::
 general.commands.downvotePost=${spring.application.name}::Downvote Post::
 general.commands.upvoteComment=${spring.application.name}::Upvote Comment::
+general.commands.downvoteComment=${spring.application.name}::Downvote Comment::
+general.commands.getPostComments=${spring.application.name}::Get Post Comments::
 general.commands.reportPost=${spring.application.name}::Report Post::
 general.commands.viewReports=${spring.application.name}::Moderator View Reports::
 general.commands.banUser=${spring.application.name}::Moderator Ban User::
