--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.datasource-sql.url=jdbc:postgresql://${postgres.host}:${postgres.port}/${
 spring.datasource-sql.username=${postgres.username}
 spring.datasource-sql.password=${postgres.password}
 
+spring.mvc.pathmatch.matching-strategy = ant-path-matcher
+
 spring.datasource-sql.configuration.pool-name=SqlHikariPool
 spring.datasource-sql.configuration.connection-timeout=20000
 spring.datasource-sql.configuration.minimum-idle=10
@@ -40,6 +42,7 @@ spring.redis.port=6379
 popularPostsUpvoteThreshold=1
 popularPostsCache="popularPostsCache"
 postsCache="postsCache"
+
 
 general.commands.createPost=${spring.application.name}::Create Post::
 general.commands.comment=${spring.application.name}::Create Comment::
