--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -57,3 +57,4 @@ general.commands.reportPost=${spring.application.name}::Report Post::
 general.commands.viewReports=${spring.application.name}::Moderator View Reports::
 general.commands.banUser=${spring.application.name}::Moderator Ban User::
 general.commands.getPopularPost=${spring.application.name}::Get Popular Posts::
+general.commands.redditsRecommendations=${spring.application.name}::Get Reddits Recommendations::
