--- a/apps/pom.xml
+++ b/apps/pom.xml
@@ -1,18 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.ScalableTeam-0-0-1</groupId>
-		<artifactId>reddit</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
-	<artifactId>apps</artifactId>
-	<packaging>pom</packaging>
-	<name>apps</name>
-	<description>Semester 10 Scalable Reddit Microservices Container</description>
-	<modules>
-		<module>notificationsApp</module>
-		<module>redditApp</module>
-	</modules>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>com.ScalableTeam-0-0-1</groupId>
+        <artifactId>reddit</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+
+    <artifactId>apps</artifactId>
+    <packaging>pom</packaging>
+    <name>apps</name>
+    <description>Semester 10 Scalable Reddit Microservices Container</description>
+
+    <modules>
+        <module>notificationsApp</module>
+        <module>redditApp</module>
+    </modules>
+
+    <properties>
+        <junit.jupiter.version>5.8.1</junit.jupiter.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.5.5</version>
+            <scope>test</scope>
+
+            <!-- Exclude JUnit 4 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
+
+        </dependency>
+    </dependencies>
+
 </project>
