Listening to MessageQueues and caching strings

--- a/amqp/src/main/resources/message-queues.properties
+++ b/amqp/src/main/resources/message-queues.properties
@@ -19,4 +19,21 @@ mq.queues.response.reddit.upvotePost=REDDIT_UPVOTE_POST_RESPONSE
 
 mq.queues.request.reddit.downvotePost=REDDIT_DOWNVOTE_POST_REQUEST
 mq.queues.response.reddit.downvotePost=REDDIT_DOWNVOTE_POST_RESPONSE
+
+mq.queues.request.reddit.assignModerators=REDDIT_ASSIGN_MODERATORS_POST_REQUEST
+mq.queues.response.reddit.assignModerators=REDDIT_ASSIGN_MODERATORS_POST_RESPONSE
+
+mq.queues.request.reddit.createChannel=REDDIT_CREATE_CHANNEL_POST_REQUEST
+mq.queues.response.reddit.createChannel=REDDIT_CREATE_CHANNEL_POST_RESPONSE
+
+
+mq.queues.request.reddit.getPopularPosts=REDDIT_GET_POPULAR_POSTS_REQUEST
+mq.queues.response.reddit.getPopularPosts=REDDIT_GET_POPULAR_POSTS_RESPONSE
+
+mq.queues.request.reddit.getPost=REDDIT_GET_POST_REQUEST
+mq.queues.response.reddit.getPost=REDDIT_GET_POST_RESPONSE
+
+mq.queues.request.reddit.readWall=REDDIT_READ_WALL_REQUEST
+mq.queues.response.reddit.readWall=REDDIT_READ_WALL_RESPONSE
+
 mq.queues.request.notifications.publishNotification=NOTIFICATIONS_PUBLISH_NOTIFICATION_REQUEST
