--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -56,5 +56,8 @@ general.commands.getPostComments=${spring.application.name}::Get Post Comments::
 general.commands.reportPost=${spring.application.name}::Report Post::
 general.commands.viewReports=${spring.application.name}::Moderator View Reports::
 general.commands.banUser=${spring.application.name}::Moderator Ban User::
-general.commands.getPopularPost=${spring.application.name}::Get Popular Posts::
+general.commands.getPopularPosts=${spring.application.name}::Get Popular Posts::
 general.commands.redditsRecommendations=${spring.application.name}::Get Reddits Recommendations::
+general.commands.assignModerators=${spring.application.name}::Assign Moderators To Channel::
+general.commands.createChannel=${spring.application.name}::Create New Channel::
+general.commands.getPost=${spring.application.name}::Get Post::
