--- a/apps/redditApp/pom.xml
+++ b/apps/redditApp/pom.xml
@@ -44,6 +44,11 @@
 			<version>2.4.3</version>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.13.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 			<version>2.4.3</version>
