--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,6 @@
         <module>amqp</module>
         <module>service-discovery</module>
         <module>swagger-docs</module>
+        <module>lib</module>
     </modules>
 </project>
