--- a/apps/notificationsApp/src/main/resources/application.properties
+++ b/apps/notificationsApp/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.config.import=
 spring.application.name=notifications
+spring.main.allow-bean-definition-overriding=true
 management.endpoints.web.exposure.include=*
 management.server.port=9091
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
