--- a/amqp/src/main/resources/message-queues.properties
+++ b/amqp/src/main/resources/message-queues.properties
@@ -1,4 +1,8 @@
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+
 mq.exchange=internal.exchange
+mq.exceptions.exchange=dead.internal.exchange
+mq.exceptions.queue=DEAD_QUEUE
 
 mq.queues.request.reddit.createPost=REDDIT_CREATE_POST_REQUEST
 mq.queues.response.reddit.createPost=REDDIT_CREATE_POST_RESPONSE
