feat-1: search by title or channel

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -118,5 +118,5 @@ general.commands.recommendationsBasedOnFollowersService=${spring.application.nam
 general.commands.assignModerators=${spring.application.name}::Assign Moderators To Channel::
 general.commands.createChannel=${spring.application.name}::Create New Channel::
 general.commands.getPost=${spring.application.name}::Get Post::
-
-
+general.commands.searchByTitle=${spring.application.name}::Search By Title::
+general.commands.searchByChannel=${spring.application.name}::Search By Channel::
