--- a/apps/mediaApp/pom.xml
+++ b/apps/mediaApp/pom.xml
@@ -14,13 +14,29 @@
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
-            <version>8.4.1</version>
+            <version>8.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.ScalableTeam-0-0-1</groupId>
             <artifactId>lib</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+
+
+
     </dependencies>
 
     <properties>
