--- a/apps/mediaApp/src/main/resources/application.properties
+++ b/apps/mediaApp/src/main/resources/application.properties
@@ -5,3 +5,4 @@ minio.access.name=minioadmin
 minio.access.secret=minioadmin
 minio.url=http://127.0.0.1:9000
 minio.bucket.name=profile-photos
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
