followReddit updates SQL table

--- a/amqp/src/main/resources/message-queues.properties
+++ b/amqp/src/main/resources/message-queues.properties
@@ -41,3 +41,6 @@ mq.queues.request.reddit.readWall=REDDIT_READ_WALL_REQUEST
 mq.queues.response.reddit.readWall=REDDIT_READ_WALL_RESPONSE
 
 mq.queues.request.notifications.publishNotification=NOTIFICATIONS_PUBLISH_NOTIFICATION_REQUEST
+
+mq.queues.request.reddit.reportPost=REDDIT_REPORT_POST_REQUEST
+mq.queues.response.reddit.reportPost=REDDIT_REPORT_POST_RESPONSE
