--- a/amqp/src/main/resources/message-queues.properties
+++ b/amqp/src/main/resources/message-queues.properties
@@ -6,6 +6,7 @@ mq.exceptions.queue=DEAD_QUEUE
 
 mq.queues.request.reddit.createPost=REDDIT_CREATE_POST_REQUEST
 mq.queues.response.reddit.createPost=REDDIT_CREATE_POST_RESPONSE
+
 mq.queues.request.reddit.comment=REDDIT_COMMENT_REQUEST
 mq.queues.response.reddit.comment=REDDIT_COMMENT_RESPONSE
 
@@ -30,17 +31,23 @@ mq.queues.response.reddit.assignModerators=REDDIT_ASSIGN_MODERATORS_POST_RESPONS
 mq.queues.request.reddit.createChannel=REDDIT_CREATE_CHANNEL_POST_REQUEST
 mq.queues.response.reddit.createChannel=REDDIT_CREATE_CHANNEL_POST_RESPONSE
 
-
 mq.queues.request.reddit.getPopularPosts=REDDIT_GET_POPULAR_POSTS_REQUEST
 mq.queues.response.reddit.getPopularPosts=REDDIT_GET_POPULAR_POSTS_RESPONSE
-
 mq.queues.request.reddit.getPost=REDDIT_GET_POST_REQUEST
 mq.queues.response.reddit.getPost=REDDIT_GET_POST_RESPONSE
-
 mq.queues.request.reddit.readWall=REDDIT_READ_WALL_REQUEST
 mq.queues.response.reddit.readWall=REDDIT_READ_WALL_RESPONSE
-
-mq.queues.request.notifications.publishNotification=NOTIFICATIONS_PUBLISH_NOTIFICATION_REQUEST
-
 mq.queues.request.reddit.reportPost=REDDIT_REPORT_POST_REQUEST
 mq.queues.response.reddit.reportPost=REDDIT_REPORT_POST_RESPONSE
+mq.queues.request.notifications.sendNotification=NOTIFICATIONS_SEND_NOTIFICATION_REQUEST
+mq.queues.response.notifications.sendNotification=NOTIFICATIONS_SEND_NOTIFICATION_RESPONSE
+mq.queues.request.notifications.getNotifications=NOTIFICATIONS_GET_NOTIFICATIONS_REQUEST
+mq.queues.response.notifications.getNotifications=NOTIFICATIONS_GET_NOTIFICATIONS_RESPONSE
+mq.queues.request.notifications.markNotificationAsRead=NOTIFICATIONS_MARK_NOTIFICATION_AS_READ_REQUEST
+mq.queues.response.notifications.markNotificationAsRead=NOTIFICATIONS_MARK_NOTIFICATION_AS_READ_RESPONSE
+mq.queues.request.notifications.deleteNotification=NOTIFICATIONS_DELETE_NOTIFICATION_REQUEST
+mq.queues.response.notifications.deleteNotification=NOTIFICATIONS_DELETE_NOTIFICATION_RESPONSE
+mq.queues.request.notifications.registerDeviceToken=NOTIFICATIONS_REGISTER_DEVICE_TOKEN_REQUEST
+mq.queues.response.notifications.registerDeviceToken=NOTIFICATIONS_REGISTER_DEVICE_TOKEN_RESPONSE
+mq.queues.request.notifications.unregisterDeviceToken=NOTIFICATIONS_UNREGISTER_DEVICE_TOKEN_REQUEST
+mq.queues.response.notifications.unregisterDeviceToken=NOTIFICATIONS_UNREGISTER_DEVICE_TOKEN_RESPONSE
