Commit extra message queue

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -78,6 +78,9 @@ mq.queues.response.reddit.getPost=REDDIT_GET_POST_RESPONSE
 mq.queues.request.reddit.readWall=REDDIT_READ_WALL_REQUEST
 mq.queues.response.reddit.readWall=REDDIT_READ_WALL_RESPONSE
 
+mq.queues.request.reddit.reportPost=REDDIT_REPORT_POST_REQUEST
+mq.queues.response.reddit.reportPost=REDDIT_REPORT_POST_RESPONSE
+
 general.commands.createPost=${spring.application.name}::Create Post::
 general.commands.comment=${spring.application.name}::Create Comment::
 general.commands.readWall=${spring.application.name}::Read Wall::
