--- a/amqp/src/main/resources/message-queues.properties
+++ b/amqp/src/main/resources/message-queues.properties
@@ -44,3 +44,18 @@ mq.queues.request.notifications.publishNotification=NOTIFICATIONS_PUBLISH_NOTIFI
 
 mq.queues.request.reddit.reportPost=REDDIT_REPORT_POST_REQUEST
 mq.queues.response.reddit.reportPost=REDDIT_REPORT_POST_RESPONSE
+
+mq.queues.request.reddit.viewReports=REDDIT_VIEW_REPORTS_REQUEST
+mq.queues.response.reddit.viewReports=REDDIT_VIEW_REPORTS_RESPONSE
+
+mq.queues.request.reddit.banUser=REDDIT_BAN_USER_REQUEST
+mq.queues.response.reddit.banUser=REDDIT_BAN_USER_RESPONSE
+
+mq.queues.request.reddit.followReddit=REDDIT_FOLLOW_REDDIT_REQUEST
+mq.queues.response.reddit.followReddit=REDDIT_FOLLOW_REDDIT_RESPONSE
+
+mq.queues.request.reddit.recommendationsBasedOnFollowersService=REDDIT_RECOMMENDATIONS_FOLLOWERS_REQUEST
+mq.queues.response.reddit.recommendationsBasedOnFollowersService=REDDIT_RECOMMENDATIONS_FOLLOWERS_RESPONSE
+
+mq.queues.request.reddit.redditsRecommendations=REDDIT_REDDIT_RECOMMENDATIONS_REQUEST
+mq.queues.response.reddit.redditsRecommendations=REDDIT_REDDIT_RECOMMENDATIONS_RESPONSE
