MQs all done. moved queue name props. strated junit tests

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -45,6 +45,7 @@ postsCache="postsCache"
 
 mq.queues.request.reddit.createPost=REDDIT_CREATE_POST_REQUEST
 mq.queues.response.reddit.createPost=REDDIT_CREATE_POST_RESPONSE
+
 mq.queues.request.reddit.comment=REDDIT_COMMENT_REQUEST
 mq.queues.response.reddit.comment=REDDIT_COMMENT_RESPONSE
 
@@ -81,6 +82,24 @@ mq.queues.response.reddit.readWall=REDDIT_READ_WALL_RESPONSE
 mq.queues.request.reddit.reportPost=REDDIT_REPORT_POST_REQUEST
 mq.queues.response.reddit.reportPost=REDDIT_REPORT_POST_RESPONSE
 
+mq.queues.request.reddit.viewReports=REDDIT_VIEW_REPORTS_REQUEST
+mq.queues.response.reddit.viewReports=REDDIT_VIEW_REPORTS_RESPONSE
+
+mq.queues.request.reddit.banUser=REDDIT_BAN_USER_REQUEST
+mq.queues.response.reddit.banUser=REDDIT_BAN_USER_RESPONSE
+
+mq.queues.request.reddit.followReddit=REDDIT_FOLLOW_REDDIT_REQUEST
+mq.queues.response.reddit.followReddit=REDDIT_FOLLOW_REDDIT_RESPONSE
+
+mq.queues.request.reddit.recommendationsBasedOnFollowersService=REDDIT_RECOMMENDATIONS_FOLLOWERS_REQUEST
+mq.queues.response.reddit.recommendationsBasedOnFollowersService=REDDIT_RECOMMENDATIONS_FOLLOWERS_RESPONSE
+
+mq.queues.request.reddit.redditsRecommendations=REDDIT_REDDIT_RECOMMENDATIONS_REQUEST
+mq.queues.response.reddit.redditsRecommendations=REDDIT_REDDIT_RECOMMENDATIONS_RESPONSE
+
+
+
+
 general.commands.createPost=${spring.application.name}::Create Post::
 general.commands.comment=${spring.application.name}::Create Comment::
 general.commands.readWall=${spring.application.name}::Read Wall::
@@ -99,3 +118,5 @@ general.commands.recommendationsBasedOnFollowersService=${spring.application.nam
 general.commands.assignModerators=${spring.application.name}::Assign Moderators To Channel::
 general.commands.createChannel=${spring.application.name}::Create New Channel::
 general.commands.getPost=${spring.application.name}::Get Post::
+
+
