--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -97,7 +97,11 @@ mq.queues.response.reddit.recommendationsBasedOnFollowersService=REDDIT_RECOMMEN
 mq.queues.request.reddit.redditsRecommendations=REDDIT_REDDIT_RECOMMENDATIONS_REQUEST
 mq.queues.response.reddit.redditsRecommendations=REDDIT_REDDIT_RECOMMENDATIONS_RESPONSE
 
+mq.queues.request.reddit.searchByTitle=REDDIT_SEARCH_BY_TITLE_REQUEST
+mq.queues.response.reddit.searchByTitle=REDDIT_SEARCH_BY_TITLE_RESPONSE
 
+mq.queues.request.reddit.searchByChannel=REDDIT_SEARCH_BY_CHANNEL_REQUEST
+mq.queues.response.reddit.searchByChannel=REDDIT_SEARCH_BY_CHANNEL_RESPONSE
 
 
 general.commands.createPost=${spring.application.name}::Create Post::
