Commit initial version of thread controller

--- a/apps/pom.xml
+++ b/apps/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>notificationsApp</module>
         <module>redditApp</module>
+        <module>controllerApp</module>
     </modules>
 
     <properties>
