--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
         <module>amqp</module>
         <module>service-discovery</module>
         <module>swagger-docs</module>
+        <module>lib</module>
         <module>httpServer</module>
     </modules>
 
