--- a/apps/userApp/pom.xml
+++ b/apps/userApp/pom.xml
@@ -45,6 +45,15 @@
             <artifactId>password4j</artifactId>
             <version>1.5.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.212</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
     </dependencies>
 </project>
