--- a/apps/userApp/src/main/resources/application.properties
+++ b/apps/userApp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/reddit_app
-spring.datasource.username=maria
-spring.datasource.password=maria
+spring.datasource.username=postgres
+spring.datasource.password=Welcome
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
