--- a/apps/chatApp/Dockerfile
+++ b/apps/chatApp/Dockerfile
@@ -1,4 +1,6 @@
 FROM openjdk:11
 ARG JAR_FILE=target/reddit-chat-app.jar
+RUN mkdir -p /home/app
+COPY . /home/app
 COPY ${JAR_FILE} reddit-chat-app.jar
 ENTRYPOINT ["java", "-jar", "/reddit-chat-app.jar"]
