--- a/apps/userApp/pom.xml
+++ b/apps/userApp/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>userApp</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>userApp</name>
     <description>Semester 10 Scalable Reddit Microservice - User App</description>
