--- a/apps/controllerApp/pom.xml
+++ b/apps/controllerApp/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>controllerApp</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <name>controllerApp</name>
     <description>Semester 10 Scalable Reddit Microservice - Controller App</description>
     <packaging>jar</packaging>
