--- a/apps/mediaApp/pom.xml
+++ b/apps/mediaApp/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mediaApp</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <name>mediaApp</name>
     <description>Semester 10 Scalable Reddit Microservice - Media App</description>
     <packaging>jar</packaging>
