--- a/apps/pom.xml
+++ b/apps/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>apps</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>apps</name>
     <description>Semester 10 Scalable Reddit Microservices Container</description>
