--- a/httpServer/pom.xml
+++ b/httpServer/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>httpServer</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>httpServer</name>
     <description>Semester 10 Scalable Reddit Microservice - HTTP Server</description>
