--- a/lib/amqp/pom.xml
+++ b/lib/amqp/pom.xml
@@ -3,13 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>reddit</artifactId>
+        <artifactId>lib</artifactId>
         <groupId>com.ScalableTeam-0-0-1</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>amqp</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <name>amqp</name>
     <description>Semester 10 Scalable Reddit Application - Rabbit MQ Message queues</description>
     <packaging>jar</packaging>
