--- a/lib/arango/pom.xml
+++ b/lib/arango/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>arango</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <name>arango</name>
     <description>Semester 10 Scalable Reddit Microservice - Shared Arango DB</description>
     <packaging>jar</packaging>
