--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>lib</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>lib</name>
     <description>Semester 10 Scalable Reddit Microservices Libs</description>
