--- a/apps/chatApp/pom.xml
+++ b/apps/chatApp/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>firebase-admin</artifactId>
             <version>8.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.ScalableTeam-0-0-1</groupId>
+            <artifactId>amqp</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
