--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     container_name: postgres
     image: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: Welcome
+      POSTGRES_USER: maria
+      POSTGRES_PASSWORD: maria
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
