--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -39,9 +39,14 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 
 spring.redis.host=localhost
 spring.redis.port=6379
-popularPostsUpvoteThreshold=1
-popularPostsCache="popularPostsCache"
-postsCache="postsCache"
+
+popular.postsUpvoteThreshold=1
+popular.channelFollowersThreshold=1
+
+cache.popularPostsCache=popularPostsCache
+cache.normalPostsCache=postsCache
+cache.popularChannelsCache=popularChannelsCache
+
 
 mq.queues.request.reddit.createPost=REDDIT_CREATE_POST_REQUEST
 mq.queues.response.reddit.createPost=REDDIT_CREATE_POST_RESPONSE
@@ -72,6 +77,9 @@ mq.queues.response.reddit.createChannel=REDDIT_CREATE_CHANNEL_POST_RESPONSE
 
 mq.queues.request.reddit.getPopularPosts=REDDIT_GET_POPULAR_POSTS_REQUEST
 mq.queues.response.reddit.getPopularPosts=REDDIT_GET_POPULAR_POSTS_RESPONSE
+
+mq.queues.request.reddit.getPopularChannels=REDDIT_GET_POPULAR_CHANNELS_REQUEST
+mq.queues.response.reddit.getPopularChannels=REDDIT_GET_POPULAR_CHANNELS_RESPONSE
 
 mq.queues.request.reddit.getPost=REDDIT_GET_POST_REQUEST
 mq.queues.response.reddit.getPost=REDDIT_GET_POST_RESPONSE
@@ -113,6 +121,7 @@ general.commands.reportPost=${spring.application.name}::Report Post::
 general.commands.viewReports=${spring.application.name}::Moderator View Reports::
 general.commands.banUser=${spring.application.name}::Moderator Ban User::
 general.commands.getPopularPosts=${spring.application.name}::Get Popular Posts::
+general.commands.getPopularChannels=${spring.application.name}::Get Popular Channels::
 general.commands.redditsRecommendations=${spring.application.name}::Get Reddits Recommendations::
 general.commands.recommendationsBasedOnFollowersService=${spring.application.name}::Get Recommendations Based On Followers::
 general.commands.assignModerators=${spring.application.name}::Assign Moderators To Channel::
