--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -21,5 +21,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.ScalableTeam-0-0-1</groupId>-->
+<!--            <artifactId>redditApp</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
