--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -8,9 +8,9 @@ general.environment=production
 
 postgres.host=localhost
 postgres.port=5432
-postgres.dbName=${general.environment}-reddit
-postgres.username=maria
-postgres.password=maria
+postgres.dbName=${general.environment}_reddit
+postgres.username=postgres
+postgres.password=Welcome
 
 spring.datasource-sql.driver-class-name=org.postgresql.Driver
 spring.datasource-sql.url=jdbc:postgresql://${postgres.host}:${postgres.port}/${postgres.dbName}?escapeSyntaxCallMode=call
