popularChannels not tested and started UnitTesting

--- a/lib/amqp/src/main/resources/message-queues.properties
+++ b/lib/amqp/src/main/resources/message-queues.properties
@@ -34,6 +34,9 @@ mq.queues.response.reddit.createChannel=REDDIT_CREATE_CHANNEL_POST_RESPONSE
 mq.queues.request.reddit.getPopularPosts=REDDIT_GET_POPULAR_POSTS_REQUEST
 mq.queues.response.reddit.getPopularPosts=REDDIT_GET_POPULAR_POSTS_RESPONSE
 
+mq.queues.request.reddit.getPopularChannels=REDDIT_GET_POPULAR_CHANNELS_REQUEST
+mq.queues.response.reddit.getPopularChannels=REDDIT_GET_POPULAR_CHANNELS_RESPONSE
+
 mq.queues.request.reddit.getPost=REDDIT_GET_POST_REQUEST
 mq.queues.response.reddit.getPost=REDDIT_GET_POST_RESPONSE
 
