Commit second version of controller with threading and base server/client communication working but with little refactoring needed

--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -19,5 +19,6 @@
         <module>services</module>
         <module>models</module>
         <module>amqp</module>
+        <module>utils</module>
     </modules>
 </project>
