Added Auth filter and controller

--- a/httpServer/src/main/resources/commands.properties
+++ b/httpServer/src/main/resources/commands.properties
@@ -4,3 +4,7 @@ commands.notifications.markNotificationAsRead=markNotificationAsReadCommand
 commands.notifications.deleteNotification=deleteNotificationCommand
 commands.notifications.registerDeviceToken=registerDeviceTokenCommand
 commands.notifications.unregisterDeviceToken=unregisterDeviceTokenCommand
+
+commands.user.signUp=signUpCommand
+commands.user.login=loginCommand
+commands.user.deleteAccount=deleteAccountCommand
