junit tests added

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -70,3 +70,4 @@ general.commands.createChannel=${spring.application.name}::Create New Channel::
 general.commands.getPost=${spring.application.name}::Get Post::
 general.commands.searchByTitle=${spring.application.name}::Search By Title::
 general.commands.searchByChannel=${spring.application.name}::Search By Channel::
+general.commands.unfollowReddit=${spring.application.name}::Unfollow Channel::
