Commit controller in httpServer, remove usage of legacyMessageQueue

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -8,9 +8,9 @@ general.environment=production
 
 postgres.host=localhost
 postgres.port=5432
-postgres.dbName=${general.environment}_reddit
-postgres.username=postgres
-postgres.password=Welcome
+postgres.dbName=${general.environment}-reddit
+postgres.username=maria
+postgres.password=maria
 
 spring.datasource-sql.driver-class-name=org.postgresql.Driver
 spring.datasource-sql.url=jdbc:postgresql://${postgres.host}:${postgres.port}/${postgres.dbName}?escapeSyntaxCallMode=call
@@ -46,28 +46,3 @@ popular.channelFollowersThreshold=1
 cache.popularPostsCache=popularPostsCache
 cache.normalPostsCache=postsCache
 cache.popularChannelsCache=popularChannelsCache
-
-
-general.commands.createPost=${spring.application.name}::Create Post::
-general.commands.comment=${spring.application.name}::Create Comment::
-general.commands.readWall=${spring.application.name}::Read Wall::
-general.commands.followReddit=${spring.application.name}::Follow Reddit::
-general.commands.unFollowReddit=${spring.application.name}::UnFollow Reddit::
-general.commands.upvotePost=${spring.application.name}::Upvote Post::
-general.commands.downvotePost=${spring.application.name}::Downvote Post::
-general.commands.upvoteComment=${spring.application.name}::Upvote Comment::
-general.commands.downvoteComment=${spring.application.name}::Downvote Comment::
-general.commands.getPostComments=${spring.application.name}::Get Post Comments::
-general.commands.reportPost=${spring.application.name}::Report Post::
-general.commands.viewReports=${spring.application.name}::Moderator View Reports::
-general.commands.banUser=${spring.application.name}::Moderator Ban User::
-general.commands.getPopularPosts=${spring.application.name}::Get Popular Posts::
-general.commands.getPopularChannels=${spring.application.name}::Get Popular Channels::
-general.commands.redditsRecommendations=${spring.application.name}::Get Reddits Recommendations::
-general.commands.recommendationsBasedOnFollowersService=${spring.application.name}::Get Recommendations Based On Followers::
-general.commands.assignModerators=${spring.application.name}::Assign Moderators To Channel::
-general.commands.createChannel=${spring.application.name}::Create New Channel::
-general.commands.getPost=${spring.application.name}::Get Post::
-general.commands.searchByTitle=${spring.application.name}::Search By Title::
-general.commands.searchByChannel=${spring.application.name}::Search By Channel::
-general.commands.unfollowReddit=${spring.application.name}::Unfollow Channel::
