--- a/httpServer/src/main/resources/commands.properties
+++ b/httpServer/src/main/resources/commands.properties
@@ -8,3 +8,26 @@ commands.notifications.unregisterDeviceToken=unregisterDeviceTokenCommand
 commands.user.signUp=signUpCommand
 commands.user.login=loginCommand
 commands.user.deleteAccount=deleteAccountCommand
+
+commands.reddit.createPost=createPostCommand
+commands.reddit.comment=commentCommand
+commands.reddit.readWall=readWallCommand
+commands.reddit.followReddit=followRedditCommand
+commands.reddit.unfollowReddit=unFollowRedditCommand
+commands.reddit.upvotePost=upvotePostCommand
+commands.reddit.downvotePost=downvotePostCommand
+commands.reddit.upvoteComment=upvoteCommentCommand
+commands.reddit.downvoteComment=downvoteCommentCommand
+commands.reddit.getPostComments=getPostCommentsCommand
+commands.reddit.getPost=getPostCommand
+commands.reddit.reportPost=reportPostCommand
+commands.reddit.viewReports=viewReportsCommand
+commands.reddit.banUser=banUserCommand
+commands.reddit.getPopularPosts=getPopularPostsCommand
+commands.reddit.getPopularChannels=getPopularChannelsCommand
+commands.reddit.redditsRecommendations=redditsRecommendationsCommand
+commands.reddit.recommendationsBasedOnFollowersService=recommendationsBasedOnFollowersServiceCommand
+commands.reddit.assignModerators=assignModeratorsCommand
+commands.reddit.createChannel=createChannelCommand
+commands.reddit.searchByTitle=searchByTitleCommand
+commands.reddit.searchByChannel=searchByChannelCommand
