Commit third version of controller with pooling finished and half class addition

--- a/apps/userApp/src/main/resources/application.properties
+++ b/apps/userApp/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/reddit_app
-spring.datasource.username=postgres
-spring.datasource.password=Welcome
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource-sql.driver-class-name=org.postgresql.Driver
+spring.datasource-sql.url=jdbc:postgresql://localhost:5432/reddit_app
+spring.datasource-sql.username=postgres
+spring.datasource-sql.password=Welcome
+
+spring.datasource-sql.configuration.pool-name=SqlHikariPool
+spring.datasource-sql.configuration.connection-timeout=20000
+spring.datasource-sql.configuration.minimum-idle=10
+spring.datasource-sql.configuration.maximum-pool-size=10
+spring.datasource-sql.configuration.max-lifetime=30000
+spring.datasource-sql.configuration.auto-commit=false
