--- a/apps/userApp/pom.xml
+++ b/apps/userApp/pom.xml
@@ -54,5 +54,9 @@
             <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
     </dependencies>
 </project>
