--- a/apps/mediaApp/pom.xml
+++ b/apps/mediaApp/pom.xml
@@ -21,7 +21,7 @@
             <version>8.2.1</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
