Fix: Modified Build in pom files

--- a/lib/models/pom.xml
+++ b/lib/models/pom.xml
@@ -19,7 +19,7 @@
 
     <dependencies>
 
-    <dependency>
+        <dependency>
             <groupId>com.ScalableTeam-0-0-1</groupId>
             <artifactId>arango</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -27,5 +27,21 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
