fix: h2 database removed

--- a/apps/userApp/Dockerfile
+++ b/apps/userApp/Dockerfile
@@ -1,7 +1,6 @@
-FROM java:11
-
-EXPOSE: 8080
-
-ADD target/userApp.jar userApp.jar
-
-ENTRYPOINT ["java","jar","userApp.jar"]
+FROM openjdk:11
+ARG JAR_FILE=target/userApp-0.0.1-SNAPSHOT.jar
+RUN mkdir -p /home/app
+COPY . /home/app
+COPY ${JAR_FILE} target/userApp-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java", "-jar", "/userApp-0.0.1-SNAPSHOT.jar"]
