Commit vote routes with notifications, adding spring.application.name to all apps

--- a/apps/mediaApp/src/main/resources/application.properties
+++ b/apps/mediaApp/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #minio.default.folder= //E:/University/Sem 10/CSEN 1073 Architecture of Massively Scalable Apps/Project/MINIO/MINIO_PATH
 minio.default.folder=/
 server.port=2616
+spring.application.name=media
 minio.access.name=minioadmin
 minio.access.secret=minioadmin
 minio.url=http://127.0.0.1:9000
