--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -2,10 +2,9 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 spring.application.name=reddit
 management.endpoints.web.exposure.include=*
-management.server.port=9091
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 general.environment=production
-
+server.port=8081
 postgres.host=localhost
 postgres.port=5432
 postgres.dbName=${general.environment}-reddit
