--- a/apps/userApp/src/main/resources/application.properties
+++ b/apps/userApp/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=user
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
