Add setting concurrentConsumers on startup

--- a/lib/amqp/src/main/resources/message-queues.properties
+++ b/lib/amqp/src/main/resources/message-queues.properties
@@ -3,6 +3,7 @@ spring.rabbitmq.listener.simple.default-requeue-rejected=false
 mq.exchange=internal.exchange
 mq.exceptions.exchange=dead.internal.exchange
 mq.exceptions.queue=DEAD_QUEUE
+mq.concurrentConsumers=15
 
 mq.queues.request.reddit.createPost=REDDIT_CREATE_POST_REQUEST
 mq.queues.response.reddit.createPost=REDDIT_CREATE_POST_RESPONSE
