inegrated with notifications

--- a/apps/chatApp/Dockerfile
+++ b/apps/chatApp/Dockerfile
@@ -1,6 +1,4 @@
 FROM openjdk:11
-ARG JAR_FILE=target/reddit-chat-app.jar
-RUN mkdir -p /home/app
-COPY . /home/app
-COPY ${JAR_FILE} reddit-chat-app.jar
-ENTRYPOINT ["java", "-jar", "/reddit-chat-app.jar"]
+ARG JAR_FILE=target/chatApp-0.0.1-SNAPSHOT.jar
+COPY ${JAR_FILE} chatApp.jar
+ENTRYPOINT ["java", "-jar", "/chatApp.jar"]
