bookmarks done, recommendations1 testing done

--- a/httpServer/src/main/resources/commands.properties
+++ b/httpServer/src/main/resources/commands.properties
@@ -31,3 +31,5 @@ commands.reddit.assignModerators=assignModeratorsCommand
 commands.reddit.createChannel=createChannelCommand
 commands.reddit.searchByTitle=searchByTitleCommand
 commands.reddit.searchByChannel=searchByChannelCommand
+commands.reddit.bookmarkChannel=bookmarkChannelCommand
+commands.reddit.bookmarkPost=bookmarkChannelCommand
