--- a/lib/amqp/src/main/resources/message-queues.properties
+++ b/lib/amqp/src/main/resources/message-queues.properties
@@ -70,3 +70,9 @@ mq.queues.response.reddit.searchByTitle=REDDIT_SEARCH_BY_TITLE_RESPONSE
 
 mq.queues.request.reddit.searchByChannel=REDDIT_SEARCH_BY_CHANNEL_REQUEST
 mq.queues.response.reddit.searchByChannel=REDDIT_SEARCH_BY_CHANNEL_RESPONSE
+
+mq.queues.request.reddit.bookmarkChannel=REDDIT_BOOKMARK_CHANNEL_REQUEST
+mq.queues.response.reddit.bookmarkChannel=REDDIT_BOOKMARK_CHANNEL_RESPONSE
+
+mq.queues.request.reddit.bookmarkPost=REDDIT_BOOKMARK_POST_REQUEST
+mq.queues.response.reddit.bookmarkPost=REDDIT_BOOKMARK_POST_RESPONSE
