recommendations done, testing pending

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -47,3 +47,5 @@ popular.channelFollowersThreshold=10
 cache.popularPostsCache=popularPostsCache
 cache.normalPostsCache=postsCache
 cache.popularChannelsCache=popularChannelsCache
+cache.recommendationsCache=recommendationsCache
+
