Commit finished controller

--- a/apps/userApp/src/main/resources/application.properties
+++ b/apps/userApp/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource-sql.driver-class-name=org.postgresql.Driver
-spring.datasource-sql.url=jdbc:postgresql://localhost:5432/production-reddit
-spring.datasource-sql.username=maria
-spring.datasource-sql.password=maria
+spring.datasource-sql.url=jdbc:postgresql://localhost:5432/reddit_app
+spring.datasource-sql.username=postgres
+spring.datasource-sql.password=Welcome
 
 spring.datasource-sql.configuration.pool-name=SqlHikariPool
 spring.datasource-sql.configuration.connection-timeout=20000
