--- a/lib/services/pom.xml
+++ b/lib/services/pom.xml
@@ -31,6 +31,17 @@
             <artifactId>netty-transport</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
