--- a/apps/controllerApp/pom.xml
+++ b/apps/controllerApp/pom.xml
@@ -15,6 +15,12 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-codec-http</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <name>controllerApp</name>
     <description>Semester 10 Scalable Reddit Microservice - Controller App</description>
