--- a/apps/chatApp/pom.xml
+++ b/apps/chatApp/pom.xml
@@ -14,10 +14,6 @@
     <name>chatApp</name>
     <description>Semester 10 Scalable Reddit Microservice - Chat Application</description>
     <packaging>jar</packaging>
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -46,13 +42,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -69,4 +61,9 @@
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <maven.compiler.release>11</maven.compiler.release>
+    </properties>
+
 </project>
