--- a/apps/notificationsApp/pom.xml
+++ b/apps/notificationsApp/pom.xml
@@ -16,7 +16,6 @@
     <name>notificationsApp</name>
     <description>Semester 10 Scalable Reddit Microservice - Notifications</description>
     <packaging>jar</packaging>
-
     <dependencies>
         <dependency>
             <groupId>com.google.firebase</groupId>
@@ -24,5 +23,34 @@
             <version>8.1.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <properties>
+        <maven.compiler.release>11</maven.compiler.release>
+    </properties>
 
 </project>
