--- a/apps/chatApp/src/main/resources/application-docker.properties
+++ b/apps/chatApp/src/main/resources/application-docker.properties
@@ -2,7 +2,6 @@ spring.application.name=chat
 server.port=8081
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-spring.rabbitmq.host=localhost
-arangodb.host=localhost
+spring.rabbitmq.host=rabbitmq
+arangodb.host=arangodb
 arangodb.port=8529
-
