--- a/apps/mediaApp/src/main/resources/application-docker.properties
+++ b/apps/mediaApp/src/main/resources/application-docker.properties
@@ -8,6 +8,6 @@ minio.url=http://127.0.0.1:9000
 minio.bucket.name=profile-photos
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
-spring.rabbitmq.host=localhost
-arangodb.host=localhost
+spring.rabbitmq.host=rabbitmq
+arangodb.host=arangodb
 arangodb.port=8529
