--- a/apps/controllerApp/src/main/resources/application-docker.properties
+++ b/apps/controllerApp/src/main/resources/application-docker.properties
@@ -2,6 +2,6 @@ spring.application.name=controller
 port=3006
 ssl=false
 spring.main.web-application-type=NONE
-spring.rabbitmq.host=localhost
-arangodb.host=localhost
+spring.rabbitmq.host=rabbitmq
+arangodb.host=arangodb
 arangodb.port=8529
