redditApp dockerized fixed

--- a/apps/redditApp/src/main/resources/application.properties
+++ b/apps/redditApp/src/main/resources/application.properties
@@ -9,6 +9,7 @@ general.environment=production
 
 arangodb.host=localhost
 arangodb.port=8529
+spring.rabbitmq.host=localhost
 
 postgres.host=localhost
 postgres.port=5432
