redditApp dockerized fixed again

--- a/apps/userApp/src/main/resources/application-docker.properties
+++ b/apps/userApp/src/main/resources/application-docker.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource-sql.driver-class-name=org.postgresql.Driver
-spring.datasource-sql.url=jdbc:postgresql://localhost:5432/reddit_app
+spring.datasource-sql.url=jdbc:postgresql://postgres:5432/reddit_app
 spring.datasource-sql.username=postgres
 spring.datasource-sql.password=Welcome
 
